--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "core-js": "^3.6.5",
     "firebase": "^8.2.9",
     "vue": "^3.0.0",
+    "vue-flag-icon": "^1.0.6",
     "vue-router": "^4.0.0-0",
     "vue-sweetalert2": "^5.0.2",
+    "vue3-i18n": "^1.1.4",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
